[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lc2text"
version = "0.1.0"
description = "Convert LeetCode HTML pages to clean text/Markdown"
readme = "Readme.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [ { name = "" } ]

[project.scripts]
lc2text = "lc2text.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lc2text*"]
